--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Homework - 1</title>
 	</head>
 	<body>
@@ -60,22 +60,22 @@
 			<div class="team">
 				<ul>
 					<li>
-						<img src="./images/team1.jpg" alt="Mark Guerrero Image" />
+						<img src="./images/team1.jpg" alt="Mark Guerrero Image">
 						<h2>Mark Guerrero</h2>
 						<span>Product Designer</span>
 					</li>
 					<li>
-						<img src="./images/team2.jpg" alt="Tom Ford Image" />
+						<img src="./images/team2.jpg" alt="Tom Ford Image">
 						<h2>Tom Ford</h2>
 						<span>Frontend Developer</span>
 					</li>
 					<li>
-						<img src="./images/team3.jpg" alt="Camila Garcia Image" />
+						<img src="./images/team3.jpg" alt="Camila Garcia Image">
 						<h2>Camila Garcia</h2>
 						<span>Marketolog</span>
 					</li>
 					<li>
-						<img src="./images/team4.jpg" alt="Daniel Wilson Image" />
+						<img src="./images/team4.jpg" alt="Daniel Wilson Image">
 						<h2>Daniel Wilson</h2>
 						<span>UI Designer</span>
 					</li>
