--- a/index.html
+++ b/index.html
@@ -8,82 +8,84 @@
 	<body>
 		<header>
 			<nav>
-				<a href="">WEB<span>STUDIO</span></a>
+				<a href="./index.html">WEBSTUDIO</a>
 				<ul>
-					<li>Studio</li>
-					<li>Portfolio</li>
-					<li>Contacts</li>
+					<li><a href="">Studio</a></li>
+					<li><a href="">Portfolio</a></li>
+					<li><a href="">Contacts</a></li>
 				</ul>
 			</nav>
-			<div class="contacts">
-				<span>info@devstudio.com</span>
-				<span>+11 (000) 111-11-11</span>
-			</div>
+			<address>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </address>
 		</header>
 		<main>
-			<div class="solutions">
+			<section>
 				<h1>Effective Solutions for Your Business</h1>
-				<button class="btn">Order Service</button>
-			</div>
-			<div class="skills">
+				<button type="button">Order Service</button>
+            </section>
+			<section>
+                <h2></h2>
 				<ul>
 					<li>
-						<h2>Strategy</h2>
+						<h3>Strategy</h3>
 						<p>
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
 					<li>
-						<h2>Punctuality</h2>
+						<h3>Punctuality</h3>
 						<p>
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
 					<li>
-						<h2>Dilligence</h2>
+						<h3>Dilligence</h3>
 						<p>
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h2>Technologies</h2>
+						<h3>Technologies</h3>
 						<p>
 							Design practice focused on digital experiences. We bring forth a
 							deep passion for problem-solving.
 						</p>
 					</li>
 				</ul>
-			</div>
-			<div class="team">
+			</section>
+			<section>
+                <h2>Our Team</h2>
 				<ul>
 					<li>
-						<img src="./images/team1.jpg" alt="Mark Guerrero Image">
-						<h2>Mark Guerrero</h2>
+						<img src="./images/team1.jpg" width="264" alt="Mark Guerrero Image">
+						<h3>Mark Guerrero</h3>
 						<span>Product Designer</span>
 					</li>
 					<li>
-						<img src="./images/team2.jpg" alt="Tom Ford Image">
-						<h2>Tom Ford</h2>
+						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image">
+						<h3>Tom Ford</h3>
 						<span>Frontend Developer</span>
 					</li>
 					<li>
-						<img src="./images/team3.jpg" alt="Camila Garcia Image">
-						<h2>Camila Garcia</h2>
+						<img src="./images/team3.jpg" width="264" alt="Camila Garcia Image">
+						<h3>Camila Garcia</h3>
 						<span>Marketolog</span>
 					</li>
 					<li>
-						<img src="./images/team4.jpg" alt="Daniel Wilson Image">
-						<h2>Daniel Wilson</h2>
+						<img src="./images/team4.jpg" width="264" alt="Daniel Wilson Image">
+						<h3>Daniel Wilson</h3>
 						<span>UI Designer</span>
 					</li>
 				</ul>
-			</div>
+			</section>
 		</main>
 		<footer>
-			<a href="">WEB<span>STUDIO</span></a>
+			<a href="./index.html">WEBSTUDIO</a>
 			<p>
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
