--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="./index.html">WEBSTUDIO</a>
+				<a href="./index.html">WebStudio</a>
 				<ul>
 					<li><a href="">Studio</a></li>
 					<li><a href="">Portfolio</a></li>
@@ -16,8 +16,10 @@
 				</ul>
 			</nav>
 			<address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
             </address>
 		</header>
 		<main>
@@ -26,7 +28,7 @@
 				<button type="button">Order Service</button>
             </section>
 			<section>
-                <h2></h2>
+                <h2>Skills</h2>
 				<ul>
 					<li>
 						<h3>Strategy</h3>
@@ -43,7 +45,7 @@
 						</p>
 					</li>
 					<li>
-						<h3>Dilligence</h3>
+						<h3>Diligence</h3>
 						<p>
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
@@ -64,28 +66,28 @@
 					<li>
 						<img src="./images/team1.jpg" width="264" alt="Mark Guerrero Image">
 						<h3>Mark Guerrero</h3>
-						<span>Product Designer</span>
+						<p>Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image">
 						<h3>Tom Ford</h3>
-						<span>Frontend Developer</span>
+						<p>Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/team3.jpg" width="264" alt="Camila Garcia Image">
 						<h3>Camila Garcia</h3>
-						<span>Marketolog</span>
+						<p>Marketolog</p>
 					</li>
 					<li>
 						<img src="./images/team4.jpg" width="264" alt="Daniel Wilson Image">
 						<h3>Daniel Wilson</h3>
-						<span>UI Designer</span>
+						<p>UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<footer>
-			<a href="./index.html">WEBSTUDIO</a>
+			<a href="./index.html">WebStudio</a>
 			<p>
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
