--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Homework - 1</title>
+		<title>Homework - 2</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+			integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+			rel="stylesheet">
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="./index.html">WebStudio</a>
+				<a class="logo" href="./index.html"><span>Web</span>Studio</a>
 				<ul>
 					<li><a href="">Studio</a></li>
 					<li><a href="">Portfolio</a></li>
@@ -16,19 +26,19 @@
 				</ul>
 			</nav>
 			<address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
+				<ul>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				</ul>
+			</address>
 		</header>
 		<main>
 			<section>
 				<h1>Effective Solutions for Your Business</h1>
-				<button type="button">Order Service</button>
-            </section>
+				<button type="button" class="btn">Order Service</button>
+			</section>
 			<section>
-                <h2>Skills</h2>
+				<h2>Skills</h2>
 				<ul>
 					<li>
 						<h3>Strategy</h3>
@@ -61,33 +71,110 @@
 				</ul>
 			</section>
 			<section>
-                <h2>Our Team</h2>
+				<h2>Our Team</h2>
 				<ul>
 					<li>
-						<img src="./images/team1.jpg" width="264" alt="Mark Guerrero Image">
+						<img
+							src="./images/team1.jpg"
+							width="264"
+							alt="Mark Guerrero Image"
+						>
 						<h3>Mark Guerrero</h3>
 						<p>Product Designer</p>
 					</li>
 					<li>
-						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image">
+						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" >
 						<h3>Tom Ford</h3>
 						<p>Frontend Developer</p>
 					</li>
 					<li>
-						<img src="./images/team3.jpg" width="264" alt="Camila Garcia Image">
+						<img
+							src="./images/team3.jpg"
+							width="264"
+							alt="Camila Garcia Image"
+						>
 						<h3>Camila Garcia</h3>
 						<p>Marketing</p>
 					</li>
 					<li>
-						<img src="./images/team4.jpg" width="264" alt="Daniel Wilson Image">
+						<img
+							src="./images/team4.jpg"
+							width="264"
+							alt="Daniel Wilson Image"
+						>
 						<h3>Daniel Wilson</h3>
 						<p>UI Designer</p>
 					</li>
 				</ul>
 			</section>
+			<section>
+				<h2>Our Portfolio</h2>
+				<ul>
+					<li>
+						<img
+							src="./images/portfolio1.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Banking App</h3>
+						<p>App</p>
+					</li>
+					<li>
+						<img
+							src="./images/portfolio2.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Cashless Payment</h3>
+						<p>Marketing</p>
+					</li>
+					<li>
+						<img
+							src="./images/portfolio3.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Meditation App</h3>
+						<p>App</p>
+					</li>
+					<li>
+						<img
+							src="./images/portfolio4.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Taxi Service</h3>
+						<p>Marketing</p>
+					</li>
+					<li>
+						<img
+							src="./images/portfolio5.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Screen Illustrations</h3>
+						<p>Design</p>
+					</li>
+					<li>
+						<img
+							src="./images/portfolio6.jpg"
+							width="360"
+							height="300"
+							alt=""
+						>
+						<h3>Online Courses</h3>
+						<p>Marketing</p>
+					</li>
+				</ul>
+			</section>
 		</main>
 		<footer>
-			<a href="./index.html">WebStudio</a>
+			<a class="logo" href="./index.html"><span>Web</span>Studio</a>
 			<p>
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
