--- a/index.html
+++ b/index.html
@@ -10,68 +10,70 @@
 			integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
 			rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<header>
-			<nav>
-				<a class="logo" href="./index.html"><span>Web</span>Studio</a>
+		<header class="header">
+			<nav class="header-list">
+				<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
 				<ul>
-					<li><a href="">Studio</a></li>
+					<li><a href="./index.html">Studio</a></li>
 					<li><a href="">Portfolio</a></li>
 					<li><a href="">Contacts</a></li>
 				</ul>
 			</nav>
-			<address>
+			<address class="header-contacts">
 				<ul>
 					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
-		<main>
-			<section>
-				<h1>Effective Solutions for Your Business</h1>
+		<main class="wrapper">
+			<section class="solutions">
+				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
 				<button type="button" class="btn">Order Service</button>
 			</section>
-			<section>
-				<h2>Skills</h2>
+			<section class="skills">
+				<h2 class="skills-title">Skills</h2>
 				<ul>
 					<li>
-						<h3>Strategy</h3>
-						<p>
+						<h3 class="strategy">Strategy</h3>
+						<p class="strategy-text">
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
 					<li>
-						<h3>Punctuality</h3>
-						<p>
+						<h3 class="punctuality">Punctuality</h3>
+						<p class="punctuality-text">
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
 					<li>
-						<h3>Diligence</h3>
-						<p>
+						<h3 class="diligence">Diligence</h3>
+						<p class="diligence-text">
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3>Technologies</h3>
-						<p>
+						<h3 class="technologies">Technologies</h3>
+						<p class="technologies-text">
 							Design practice focused on digital experiences. We bring forth a
 							deep passion for problem-solving.
 						</p>
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Our Team</h2>
+			<section class="team">
+				<h2 class="team-title">Our Team</h2>
 				<ul>
 					<li>
 						<img
@@ -107,15 +109,15 @@
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Our Portfolio</h2>
+			<section class="portfolio">
+				<h2 class="portfolio-title">Our Portfolio</h2>
 				<ul>
 					<li>
 						<img
 							src="./images/portfolio1.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Baking App"
 						>
 						<h3>Banking App</h3>
 						<p>App</p>
@@ -125,7 +127,7 @@
 							src="./images/portfolio2.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Cashless Payment"
 						>
 						<h3>Cashless Payment</h3>
 						<p>Marketing</p>
@@ -135,7 +137,7 @@
 							src="./images/portfolio3.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Meditation App"
 						>
 						<h3>Meditation App</h3>
 						<p>App</p>
@@ -145,7 +147,7 @@
 							src="./images/portfolio4.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Taxi Service"
 						>
 						<h3>Taxi Service</h3>
 						<p>Marketing</p>
@@ -155,7 +157,7 @@
 							src="./images/portfolio5.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Screen Illustrations"
 						>
 						<h3>Screen Illustrations</h3>
 						<p>Design</p>
@@ -165,7 +167,7 @@
 							src="./images/portfolio6.jpg"
 							width="360"
 							height="300"
-							alt=""
+							alt="Online Courses"
 						>
 						<h3>Online Courses</h3>
 						<p>Marketing</p>
@@ -173,9 +175,9 @@
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<a class="logo" href="./index.html"><span>Web</span>Studio</a>
-			<p>
+		<footer class="footer">
+			<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+			<p class="footer-text">
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
 			</p>
