--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 			<nav class="header-list">
 				<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
 				<ul>
-					<li><a href="./index.html">Studio</a></li>
-					<li><a href="">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+					<li><a class="header-link" href="./index.html">Studio</a></li>
+					<li><a class="header-link" href="">Portfolio</a></li>
+					<li><a class="header-link" href="">Contacts</a></li>
 				</ul>
 			</nav>
 			<address class="header-contacts">
 				<ul>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+					<li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="header-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
@@ -40,32 +40,32 @@
 				<button type="button" class="btn">Order Service</button>
 			</section>
 			<section class="skills">
-				<h2 class="skills-title">Skills</h2>
+				<h2 class="section-title">Skills</h2>
 				<ul>
 					<li>
-						<h3 class="strategy">Strategy</h3>
-						<p class="strategy-text">
+						<h3 class="section-name">Strategy</h3>
+						<p class="section-text">
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
 					<li>
-						<h3 class="punctuality">Punctuality</h3>
-						<p class="punctuality-text">
+						<h3 class="section-name">Punctuality</h3>
+						<p class="section-text">
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
 					<li>
-						<h3 class="diligence">Diligence</h3>
-						<p class="diligence-text">
+						<h3 class="section-name">Diligence</h3>
+						<p class="section-text">
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3 class="technologies">Technologies</h3>
-						<p class="technologies-text">
+						<h3 class="section-name">Technologies</h3>
+						<p class="section-text">
 							Design practice focused on digital experiences. We bring forth a
 							deep passion for problem-solving.
 						</p>
@@ -73,7 +73,7 @@
 				</ul>
 			</section>
 			<section class="team">
-				<h2 class="team-title">Our Team</h2>
+				<h2 class="section-title">Our Team</h2>
 				<ul>
 					<li>
 						<img
@@ -81,13 +81,13 @@
 							width="264"
 							alt="Mark Guerrero Image"
 						>
-						<h3>Mark Guerrero</h3>
-						<p>Product Designer</p>
+						<h3 class="section-name">Mark Guerrero</h3>
+						<p class="section-text">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" >
-						<h3>Tom Ford</h3>
-						<p>Frontend Developer</p>
+						<h3 class="section-name">Tom Ford</h3>
+						<p class="section-text">Frontend Developer</p>
 					</li>
 					<li>
 						<img
@@ -95,8 +95,8 @@
 							width="264"
 							alt="Camila Garcia Image"
 						>
-						<h3>Camila Garcia</h3>
-						<p>Marketing</p>
+						<h3 class="section-name">Camila Garcia</h3>
+						<p class="section-text">Marketing</p>
 					</li>
 					<li>
 						<img
@@ -104,13 +104,13 @@
 							width="264"
 							alt="Daniel Wilson Image"
 						>
-						<h3>Daniel Wilson</h3>
-						<p>UI Designer</p>
+						<h3 class="section-name">Daniel Wilson</h3>
+						<p class="section-text">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 			<section class="portfolio">
-				<h2 class="portfolio-title">Our Portfolio</h2>
+				<h2 class="section-title">Our Portfolio</h2>
 				<ul>
 					<li>
 						<img
@@ -119,8 +119,8 @@
 							height="300"
 							alt="Baking App"
 						>
-						<h3>Banking App</h3>
-						<p>App</p>
+						<h3 class="section-name">Banking App</h3>
+						<p class="section-text">App</p>
 					</li>
 					<li>
 						<img
@@ -129,8 +129,8 @@
 							height="300"
 							alt="Cashless Payment"
 						>
-						<h3>Cashless Payment</h3>
-						<p>Marketing</p>
+						<h3 class="section-name">Cashless Payment</h3>
+						<p class="section-text">Marketing</p>
 					</li>
 					<li>
 						<img
@@ -139,8 +139,8 @@
 							height="300"
 							alt="Meditation App"
 						>
-						<h3>Meditation App</h3>
-						<p>App</p>
+						<h3 class="section-name">Meditation App</h3>
+						<p class="section-text">App</p>
 					</li>
 					<li>
 						<img
@@ -149,8 +149,8 @@
 							height="300"
 							alt="Taxi Service"
 						>
-						<h3>Taxi Service</h3>
-						<p>Marketing</p>
+						<h3 class="section-name">Taxi Service</h3>
+						<p class="section-text">Marketing</p>
 					</li>
 					<li>
 						<img
@@ -159,8 +159,8 @@
 							height="300"
 							alt="Screen Illustrations"
 						>
-						<h3>Screen Illustrations</h3>
-						<p>Design</p>
+						<h3 class="section-name">Screen Illustrations</h3>
+						<p class="section-text">Design</p>
 					</li>
 					<li>
 						<img
@@ -169,8 +169,8 @@
 							height="300"
 							alt="Online Courses"
 						>
-						<h3>Online Courses</h3>
-						<p>Marketing</p>
+						<h3 class="section-name">Online Courses</h3>
+						<p class="section-text">Marketing</p>
 					</li>
 				</ul>
 			</section>
