--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<section class="team">
 				<h2 class="section-title">Our Team</h2>
 				<ul>
-					<li>
+					<li class="team-card">
 						<img
 							src="./images/team1.jpg"
 							width="264"
@@ -84,12 +84,12 @@
 						<h3 class="section-name">Mark Guerrero</h3>
 						<p class="section-text">Product Designer</p>
 					</li>
-					<li>
+					<li class="team-card">
 						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" >
 						<h3 class="section-name">Tom Ford</h3>
 						<p class="section-text">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-card">
 						<img
 							src="./images/team3.jpg"
 							width="264"
@@ -98,7 +98,7 @@
 						<h3 class="section-name">Camila Garcia</h3>
 						<p class="section-text">Marketing</p>
 					</li>
-					<li>
+					<li class="team-card">
 						<img
 							src="./images/team4.jpg"
 							width="264"
