--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Homework - 2</title>
+		<title>Homework - 3</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -35,11 +35,11 @@
 			</address>
 		</header>
 		<main class="wrapper">
-			<section class="solutions">
+			<section class="section solutions">
 				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
 				<button type="button" class="btn">Order Service</button>
 			</section>
-			<section class="skills">
+			<section class="section skills">
 				<h2 class="section-title">Skills</h2>
 				<ul>
 					<li>
@@ -72,7 +72,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="team">
+			<section class="section team">
 				<h2 class="section-title">Our Team</h2>
 				<ul>
 					<li class="team-card">
@@ -109,7 +109,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="portfolio">
+			<section class="section portfolio">
 				<h2 class="section-title">Our Portfolio</h2>
 				<ul>
 					<li>
