--- a/index.html
+++ b/index.html
@@ -1,186 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Homework - 3</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
 			integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
 			crossorigin="anonymous"
-			referrerpolicy="no-referrer">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			referrerpolicy="no-referrer"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-			rel="stylesheet">
-		<link rel="stylesheet" href="css/styles.css">
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
 		<header class="header">
-			<nav class="header-list">
-				<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-				<ul>
-					<li><a class="header-link" href="./index.html">Studio</a></li>
-					<li><a class="header-link" href="">Portfolio</a></li>
-					<li><a class="header-link" href="">Contacts</a></li>
-				</ul>
-			</nav>
-			<address class="header-contacts">
-				<ul>
-					<li><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a class="header-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-				</ul>
-			</address>
+			<div class="container header-block">
+				<nav class="header-list">
+					<a class="logo" href="./index.html"
+						>Web<span class="logo-part">Studio</span></a
+					>
+					<ul class="navigation">
+						<li><a class="header-link" href="./index.html">Studio</a></li>
+						<li><a class="header-link" href="">Portfolio</a></li>
+						<li><a class="header-link" href="">Contacts</a></li>
+					</ul>
+				</nav>
+				<address class="header-contacts">
+					<ul class="address">
+						<li>
+							<a class="header-link" href="mailto:info@devstudio.com"
+								>info@devstudio.com</a
+							>
+						</li>
+						<li>
+							<a class="header-link" href="tel:+110001111111"
+								>+11 (000) 111-11-11</a
+							>
+						</li>
+					</ul>
+				</address>
+			</div>
 		</header>
 		<main class="wrapper">
 			<section class="section solutions">
-				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
-				<button type="button" class="btn">Order Service</button>
+				<div class="container">
+					<h1 class="solutions-title">Effective Solutions for Your Business</h1>
+					<button type="button" class="btn">Order Service</button>
+				</div>
 			</section>
 			<section class="section skills">
-				<h2 class="section-title">Skills</h2>
-				<ul>
-					<li>
-						<h3 class="section-name">Strategy</h3>
-						<p class="section-text">
-							Our goal is to identify the business problem to walk away with the
-							perfect and creative solution.
-						</p>
-					</li>
-					<li>
-						<h3 class="section-name">Punctuality</h3>
-						<p class="section-text">
-							Bring the key message to the brand's audience for the best price
-							within the shortest possible time.
-						</p>
-					</li>
-					<li>
-						<h3 class="section-name">Diligence</h3>
-						<p class="section-text">
-							Research and confirm brands that present the strongest digital
-							growth opportunities and minimize risk.
-						</p>
-					</li>
-					<li>
-						<h3 class="section-name">Technologies</h3>
-						<p class="section-text">
-							Design practice focused on digital experiences. We bring forth a
-							deep passion for problem-solving.
-						</p>
-					</li>
-				</ul>
+				<div class="container">
+					<h2 class="section-title visually-hidden">Skills</h2>
+					<ul class="skills-items">
+						<li>
+							<h3 class="section-name">Strategy</h3>
+							<p class="section-text">
+								Our goal is to identify the business problem to walk away with
+								the perfect and creative solution.
+							</p>
+						</li>
+						<li>
+							<h3 class="section-name">Punctuality</h3>
+							<p class="section-text">
+								Bring the key message to the brand's audience for the best price
+								within the shortest possible time.
+							</p>
+						</li>
+						<li>
+							<h3 class="section-name">Diligence</h3>
+							<p class="section-text">
+								Research and confirm brands that present the strongest digital
+								growth opportunities and minimize risk.
+							</p>
+						</li>
+						<li>
+							<h3 class="section-name">Technologies</h3>
+							<p class="section-text">
+								Design practice focused on digital experiences. We bring forth a
+								deep passion for problem-solving.
+							</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section class="section team">
-				<h2 class="section-title">Our Team</h2>
-				<ul>
-					<li class="team-card">
-						<img
-							src="./images/team1.jpg"
-							width="264"
-							alt="Mark Guerrero Image"
-						>
-						<h3 class="section-name">Mark Guerrero</h3>
-						<p class="section-text">Product Designer</p>
-					</li>
-					<li class="team-card">
-						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" >
-						<h3 class="section-name">Tom Ford</h3>
-						<p class="section-text">Frontend Developer</p>
-					</li>
-					<li class="team-card">
-						<img
-							src="./images/team3.jpg"
-							width="264"
-							alt="Camila Garcia Image"
-						>
-						<h3 class="section-name">Camila Garcia</h3>
-						<p class="section-text">Marketing</p>
-					</li>
-					<li class="team-card">
-						<img
-							src="./images/team4.jpg"
-							width="264"
-							alt="Daniel Wilson Image"
-						>
-						<h3 class="section-name">Daniel Wilson</h3>
-						<p class="section-text">UI Designer</p>
-					</li>
-				</ul>
+				<div class="container">
+					<h2 class="section-title">Our Team</h2>
+					<ul class="team-cards">
+						<li class="team-card">
+							<img
+								src="./images/team1.jpg"
+								width="264"
+								alt="Mark Guerrero Image"
+							/>
+							<div class="person">
+								<h3 class="section-name">Mark Guerrero</h3>
+								<p class="section-text">Product Designer</p>
+							</div>
+						</li>
+						<li class="team-card">
+							<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" />
+							<div class="person">
+								<h3 class="section-name">Tom Ford</h3>
+								<p class="section-text">Frontend Developer</p>
+							</div>
+						</li>
+						<li class="team-card">
+							<img
+								src="./images/team3.jpg"
+								width="264"
+								alt="Camila Garcia Image"
+							/>
+							<div class="person">
+								<h3 class="section-name">Camila Garcia</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+						<li class="team-card">
+							<img
+								src="./images/team4.jpg"
+								width="264"
+								alt="Daniel Wilson Image"
+							/>
+							<div class="person">
+								<h3 class="section-name">Daniel Wilson</h3>
+								<p class="section-text">UI Designer</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section class="section portfolio">
-				<h2 class="section-title">Our Portfolio</h2>
-				<ul>
-					<li>
-						<img
-							src="./images/portfolio1.jpg"
-							width="360"
-							height="300"
-							alt="Baking App"
-						>
-						<h3 class="section-name">Banking App</h3>
-						<p class="section-text">App</p>
-					</li>
-					<li>
-						<img
-							src="./images/portfolio2.jpg"
-							width="360"
-							height="300"
-							alt="Cashless Payment"
-						>
-						<h3 class="section-name">Cashless Payment</h3>
-						<p class="section-text">Marketing</p>
-					</li>
-					<li>
-						<img
-							src="./images/portfolio3.jpg"
-							width="360"
-							height="300"
-							alt="Meditation App"
-						>
-						<h3 class="section-name">Meditation App</h3>
-						<p class="section-text">App</p>
-					</li>
-					<li>
-						<img
-							src="./images/portfolio4.jpg"
-							width="360"
-							height="300"
-							alt="Taxi Service"
-						>
-						<h3 class="section-name">Taxi Service</h3>
-						<p class="section-text">Marketing</p>
-					</li>
-					<li>
-						<img
-							src="./images/portfolio5.jpg"
-							width="360"
-							height="300"
-							alt="Screen Illustrations"
-						>
-						<h3 class="section-name">Screen Illustrations</h3>
-						<p class="section-text">Design</p>
-					</li>
-					<li>
-						<img
-							src="./images/portfolio6.jpg"
-							width="360"
-							height="300"
-							alt="Online Courses"
-						>
-						<h3 class="section-name">Online Courses</h3>
-						<p class="section-text">Marketing</p>
-					</li>
-				</ul>
+				<div class="container">
+					<h2 class="section-title">Our Portfolio</h2>
+					<ul class="portfolio-items">
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio1.jpg"
+								width="360"
+								height="300"
+								alt="Baking App"
+							/>
+							<div class="app">
+								<h3 class="section-name">Banking App</h3>
+								<p class="section-text">App</p>
+							</div>
+						</li>
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio2.jpg"
+								width="360"
+								height="300"
+								alt="Cashless Payment"
+							/>
+							<div class="app">
+								<h3 class="section-name">Cashless Payment</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio3.jpg"
+								width="360"
+								height="300"
+								alt="Meditation App"
+							/>
+							<div class="app">
+								<h3 class="section-name">Meditation App</h3>
+								<p class="section-text">App</p>
+							</div>
+						</li>
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio4.jpg"
+								width="360"
+								height="300"
+								alt="Taxi Service"
+							/>
+							<div class="app">
+								<h3 class="section-name">Taxi Service</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio5.jpg"
+								width="360"
+								height="300"
+								alt="Screen Illustrations"
+							/>
+							<div class="app">
+								<h3 class="section-name">Screen Illustrations</h3>
+								<p class="section-text">Design</p>
+							</div>
+						</li>
+						<li class="portfolio-item">
+							<img
+								src="./images/portfolio6.jpg"
+								width="360"
+								height="300"
+								alt="Online Courses"
+							/>
+							<div class="app">
+								<h3 class="section-name">Online Courses</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
-			<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-			<p class="footer-text">
-				Increase the flow of customers and sales for your business with digital
-				marketing & growth solutions.
-			</p>
+			<div class="container">
+				<a class="logo" href="./index.html"
+					>Web<span class="logo-part">Studio</span></a
+				>
+				<p class="footer-text">
+					Increase the flow of customers and sales for your business with
+					digital marketing & growth solutions.
+				</p>
+			</div>
 		</footer>
 	</body>
 </html>
