--- a/index.html
+++ b/index.html
@@ -57,30 +57,30 @@
 			</section>
 			<section class="section skills">
 				<div class="container">
-					<h2 class="section-title visually-hidden">Skills</h2>
+					<h2 class="visually-hidden">Skills</h2>
 					<ul class="skills-items">
-						<li>
+						<li class="skills-item">
 							<h3 class="section-name">Strategy</h3>
 							<p class="section-text">
 								Our goal is to identify the business problem to walk away with
 								the perfect and creative solution.
 							</p>
 						</li>
-						<li>
+						<li class="skills-item">
 							<h3 class="section-name">Punctuality</h3>
 							<p class="section-text">
 								Bring the key message to the brand's audience for the best price
 								within the shortest possible time.
 							</p>
 						</li>
-						<li>
+						<li class="skills-item">
 							<h3 class="section-name">Diligence</h3>
 							<p class="section-text">
 								Research and confirm brands that present the strongest digital
 								growth opportunities and minimize risk.
 							</p>
 						</li>
-						<li>
+						<li class="skills-item">
 							<h3 class="section-name">Technologies</h3>
 							<p class="section-text">
 								Design practice focused on digital experiences. We bring forth a
