--- a/index.html
+++ b/index.html
@@ -21,30 +21,34 @@
 	</head>
 	<body>
 		<header class="header">
-			<nav class="header-list">
-				<a class="logo" href="./index.html"
-					>Web<span class="logo-part">Studio</span></a
-				>
-				<ul>
-					<li><a class="header-link active" href="./index.html">Studio</a></li>
-					<li><a class="header-link" href="">Portfolio</a></li>
-					<li><a class="header-link" href="">Contacts</a></li>
-				</ul>
-			</nav>
-			<address class="header-contacts">
-				<ul>
-					<li>
-						<a class="header-link" href="mailto:info@devstudio.com"
-							>info@devstudio.com</a
-						>
-					</li>
-					<li>
-						<a class="header-link" href="tel:+110001111111"
-							>+11 (000) 111-11-11</a
-						>
-					</li>
-				</ul>
-			</address>
+			<div class="container">
+				<nav class="header-list">
+					<a class="logo" href="./index.html"
+						>Web<span class="logo-part">Studio</span></a
+					>
+					<ul>
+						<li>
+							<a class="header-link active" href="./index.html">Studio</a>
+						</li>
+						<li><a class="header-link" href="">Portfolio</a></li>
+						<li><a class="header-link" href="">Contacts</a></li>
+					</ul>
+				</nav>
+				<address class="header-contacts">
+					<ul>
+						<li>
+							<a class="header-link" href="mailto:info@devstudio.com"
+								>info@devstudio.com</a
+							>
+						</li>
+						<li>
+							<a class="header-link" href="tel:+110001111111"
+								>+11 (000) 111-11-11</a
+							>
+						</li>
+					</ul>
+				</address>
+			</div>
 		</header>
 		<main class="wrapper">
 			<section class="section solutions">
