--- a/index.html
+++ b/index.html
@@ -56,57 +56,59 @@
 				<button type="button" class="btn">Order Service</button>
 			</section>
 			<section class="section skills">
-				<h2 class="section-title">Skills</h2>
-				<ul>
-					<li>
-						<div class="icon">
-							<svg class="icon">
-								<use href="images/icons.svg#icon-antenna-1-1"></use>
-							</svg>
-						</div>
-						<h3 class="section-name">Strategy</h3>
-						<p class="section-text">
-							Our goal is to identify the business problem to walk away with the
-							perfect and creative solution.
-						</p>
-					</li>
-					<li>
-						<div class="icon">
-							<svg class="icon">
-								<use href="images/icons.svg#icon-clock-1-1"></use>
-							</svg>
-						</div>
-						<h3 class="section-name">Punctuality</h3>
-						<p class="section-text">
-							Bring the key message to the brand's audience for the best price
-							within the shortest possible time.
-						</p>
-					</li>
-					<li>
-						<div class="icon">
-							<svg class="icon">
-								<use href="images/icons.svg#icon-diagram-1-1"></use>
-							</svg>
-						</div>
-						<h3 class="section-name">Diligence</h3>
-						<p class="section-text">
-							Research and confirm brands that present the strongest digital
-							growth opportunities and minimize risk.
-						</p>
-					</li>
-					<li>
-						<div class="icon">
-							<svg class="icon">
-								<use href="images/icons.svg#icon-astronaut-1-1"></use>
-							</svg>
-						</div>
-						<h3 class="section-name">Technologies</h3>
-						<p class="section-text">
-							Design practice focused on digital experiences. We bring forth a
-							deep passion for problem-solving.
-						</p>
-					</li>
-				</ul>
+				<div class="container">
+					<h2 class="section-title">Skills</h2>
+					<ul>
+						<li>
+							<div class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-antenna-1-1"></use>
+								</svg>
+							</div>
+							<h3 class="section-name">Strategy</h3>
+							<p class="section-text">
+								Our goal is to identify the business problem to walk away with
+								the perfect and creative solution.
+							</p>
+						</li>
+						<li>
+							<div class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-clock-1-1"></use>
+								</svg>
+							</div>
+							<h3 class="section-name">Punctuality</h3>
+							<p class="section-text">
+								Bring the key message to the brand's audience for the best price
+								within the shortest possible time.
+							</p>
+						</li>
+						<li>
+							<div class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-diagram-1-1"></use>
+								</svg>
+							</div>
+							<h3 class="section-name">Diligence</h3>
+							<p class="section-text">
+								Research and confirm brands that present the strongest digital
+								growth opportunities and minimize risk.
+							</p>
+						</li>
+						<li>
+							<div class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-astronaut-1-1"></use>
+								</svg>
+							</div>
+							<h3 class="section-name">Technologies</h3>
+							<p class="section-text">
+								Design practice focused on digital experiences. We bring forth a
+								deep passion for problem-solving.
+							</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section class="section team">
 				<h2 class="section-title">Our Team</h2>
