--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li>
 							<div class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-antenna-1-1"></use>
+									<use href="./images/icons.svg#icon-antenna-1-1"></use>
 								</svg>
 							</div>
 							<h3 class="section-name">Strategy</h3>
@@ -74,7 +74,7 @@
 						<li>
 							<div class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-clock-1-1"></use>
+									<use href="./images/icons.svg#icon-clock-1-1"></use>
 								</svg>
 							</div>
 							<h3 class="section-name">Punctuality</h3>
@@ -86,7 +86,7 @@
 						<li>
 							<div class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-diagram-1-1"></use>
+									<use href="./images/icons.svg#icon-diagram-1-1"></use>
 								</svg>
 							</div>
 							<h3 class="section-name">Diligence</h3>
@@ -98,7 +98,7 @@
 						<li>
 							<div class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-astronaut-1-1"></use>
+									<use href="./images/icons.svg#icon-astronaut-1-1"></use>
 								</svg>
 							</div>
 							<h3 class="section-name">Technologies</h3>
@@ -124,22 +124,22 @@
 						<div class="icons">
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-instagram-2-1"></use>
+									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-twitter-1-1"></use>
+									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-facebook-1-1"></use>
+									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 								</svg>
 							</a>
 						</div>
@@ -151,22 +151,22 @@
 						<div class="icons">
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-instagram-2-1"></use>
+									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-twitter-1-1"></use>
+									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-facebook-1-1"></use>
+									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 								</svg>
 							</a>
 						</div>
@@ -182,22 +182,22 @@
 						<div class="icons">
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-instagram-2-1"></use>
+									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-twitter-1-1"></use>
+									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-facebook-1-1"></use>
+									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 								</svg>
 							</a>
 						</div>
@@ -213,22 +213,22 @@
 						<div class="icons">
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-instagram-2-1"></use>
+									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-twitter-1-1"></use>
+									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-facebook-1-1"></use>
+									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 							<a href="" class="icon">
 								<svg class="icon">
-									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 								</svg>
 							</a>
 						</div>
@@ -382,22 +382,22 @@
 				<div class="icons">
 					<a href="" class="icon">
 						<svg class="icon">
-							<use href="images/icons.svg#icon-instagram-2-1"></use>
+							<use href="./images/icons.svg#icon-instagram-2-1"></use>
 						</svg>
 					</a>
 					<a href="" class="icon">
 						<svg class="icon">
-							<use href="images/icons.svg#icon-twitter-1-1"></use>
+							<use href="./images/icons.svg#icon-twitter-1-1"></use>
 						</svg>
 					</a>
 					<a href="" class="icon">
 						<svg class="icon">
-							<use href="images/icons.svg#icon-facebook-1-1"></use>
+							<use href="./images/icons.svg#icon-facebook-1-1"></use>
 						</svg>
 					</a>
 					<a href="" class="icon">
 						<svg class="icon">
-							<use href="images/icons.svg#icon-linkedin-1-1"></use>
+							<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 						</svg>
 					</a>
 				</div>
