--- a/index.html
+++ b/index.html
@@ -125,37 +125,37 @@
 							<div class="text">
 								<h3 class="section-name">Mark Guerrero</h3>
 								<p class="section-text">Product Designer</p>
+								<ul class="icons">
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-instagram-2-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-twitter-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-facebook-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
-							<ul class="icons">
-								<li class="icon-element">
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-instagram-2-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="icon-element">
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-twitter-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="icon-element">
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-facebook-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="icon-element">
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
 						</li>
 						<li class="team-card">
 							<div class="img">
@@ -165,38 +165,40 @@
 									alt="Tom Ford Image"
 								/>
 							</div>
-							<h3 class="section-name">Tom Ford</h3>
-							<p class="section-text">Frontend Developer</p>
-							<ul class="icons">
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-instagram-2-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-twitter-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-facebook-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
+							<div class="text">
+								<h3 class="section-name">Tom Ford</h3>
+								<p class="section-text">Frontend Developer</p>
+								<ul class="icons">
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-instagram-2-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-twitter-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-facebook-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
 						<li class="team-card">
 							<div class="img">
@@ -206,38 +208,40 @@
 									alt="Camila Garcia Image"
 								/>
 							</div>
-							<h3 class="section-name">Camila Garcia</h3>
-							<p class="section-text">Marketing</p>
-							<ul class="icons">
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-instagram-2-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-twitter-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-facebook-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
+							<div class="text">
+								<h3 class="section-name">Camila Garcia</h3>
+								<p class="section-text">Marketing</p>
+								<ul class="icons">
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-instagram-2-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-twitter-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-facebook-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
 						<li class="team-card">
 							<div class="img">
@@ -247,38 +251,40 @@
 									alt="Daniel Wilson Image"
 								/>
 							</div>
-							<h3 class="section-name">Daniel Wilson</h3>
-							<p class="section-text">UI Designer</p>
-							<ul class="icons">
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-instagram-2-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-twitter-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-facebook-1-1"></use>
-										</svg>
-									</a>
-								</li>
-								<li>
-									<a href="" class="icon">
-										<svg width="16" height="16" class="icon">
-											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
+							<div class="text">
+								<h3 class="section-name">Daniel Wilson</h3>
+								<p class="section-text">UI Designer</p>
+								<ul class="icons">
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-instagram-2-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-twitter-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-facebook-1-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-element">
+										<a href="" class="icon">
+											<svg width="16" height="16" class="icon">
+												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -286,7 +292,7 @@
 			<section class="section portfolio">
 				<h2 class="section-title">Our Portfolio</h2>
 				<ul>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio1.jpg"
@@ -307,7 +313,7 @@
 							<p class="section-text">App</p>
 						</div>
 					</li>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio2.jpg"
@@ -328,7 +334,7 @@
 							<p class="section-text">Marketing</p>
 						</div>
 					</li>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio3.jpg"
@@ -349,7 +355,7 @@
 							<p class="section-text">App</p>
 						</div>
 					</li>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio4.jpg"
@@ -370,7 +376,7 @@
 							<p class="section-text">Marketing</p>
 						</div>
 					</li>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio5.jpg"
@@ -391,7 +397,7 @@
 							<p class="section-text">Design</p>
 						</div>
 					</li>
-					<li>
+					<li class="portfolio-card">
 						<div class="image">
 							<img
 								src="./images/portfolio6.jpg"
