--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<main class="wrapper">
 			<section class="section solutions">
 				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
-				<button type="button" class="btn">Order Service</button>
+				<button type="button" class="btn button">Order Service</button>
 			</section>
 			<section class="section skills">
 				<div class="container">
@@ -290,135 +290,137 @@
 				</div>
 			</section>
 			<section class="section portfolio">
-				<h2 class="section-title">Our Portfolio</h2>
-				<ul>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio1.jpg"
-								width="360"
-								height="300"
-								alt="Baking App"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+				<div class="container">
+					<h2 class="section-title">Our Portfolio</h2>
+					<ul>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio1.jpg"
+									width="360"
+									height="300"
+									alt="Baking App"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Banking App</h3>
-							<p class="section-text">App</p>
-						</div>
-					</li>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio2.jpg"
-								width="360"
-								height="300"
-								alt="Cashless Payment"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+							<div class="text">
+								<h3 class="section-name">Banking App</h3>
+								<p class="section-text">App</p>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Cashless Payment</h3>
-							<p class="section-text">Marketing</p>
-						</div>
-					</li>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio3.jpg"
-								width="360"
-								height="300"
-								alt="Meditation App"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+						</li>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio2.jpg"
+									width="360"
+									height="300"
+									alt="Cashless Payment"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Meditation App</h3>
-							<p class="section-text">App</p>
-						</div>
-					</li>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio4.jpg"
-								width="360"
-								height="300"
-								alt="Taxi Service"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+							<div class="text">
+								<h3 class="section-name">Cashless Payment</h3>
+								<p class="section-text">Marketing</p>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Taxi Service</h3>
-							<p class="section-text">Marketing</p>
-						</div>
-					</li>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio5.jpg"
-								width="360"
-								height="300"
-								alt="Screen Illustrations"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+						</li>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio3.jpg"
+									width="360"
+									height="300"
+									alt="Meditation App"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Screen Illustrations</h3>
-							<p class="section-text">Design</p>
-						</div>
-					</li>
-					<li class="portfolio-card">
-						<div class="image">
-							<img
-								src="./images/portfolio6.jpg"
-								width="360"
-								height="300"
-								alt="Online Courses"
-							/>
-							<div class="cover">
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
+							<div class="text">
+								<h3 class="section-name">Meditation App</h3>
+								<p class="section-text">App</p>
 							</div>
-						</div>
-						<div class="text">
-							<h3 class="section-name">Online Courses</h3>
-							<p class="section-text">Marketing</p>
-						</div>
-					</li>
-				</ul>
+						</li>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio4.jpg"
+									width="360"
+									height="300"
+									alt="Taxi Service"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
+							</div>
+							<div class="text">
+								<h3 class="section-name">Taxi Service</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio5.jpg"
+									width="360"
+									height="300"
+									alt="Screen Illustrations"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
+							</div>
+							<div class="text">
+								<h3 class="section-name">Screen Illustrations</h3>
+								<p class="section-text">Design</p>
+							</div>
+						</li>
+						<li class="portfolio-card">
+							<div class="image">
+								<img
+									src="./images/portfolio6.jpg"
+									width="360"
+									height="300"
+									alt="Online Courses"
+								/>
+								<div class="cover">
+									<p>
+										14 Stylish and User-Friendly App Design Concepts · Task
+										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+										App · Cloud Storage App
+									</p>
+								</div>
+							</div>
+							<div class="text">
+								<h3 class="section-name">Online Courses</h3>
+								<p class="section-text">Marketing</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
