--- a/index.html
+++ b/index.html
@@ -301,13 +301,11 @@
 									height="300"
 									alt="Baking App"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Banking App</h3>
@@ -322,13 +320,11 @@
 									height="300"
 									alt="Cashless Payment"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Cashless Payment</h3>
@@ -343,13 +339,11 @@
 									height="300"
 									alt="Meditation App"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Meditation App</h3>
@@ -364,13 +358,11 @@
 									height="300"
 									alt="Taxi Service"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Taxi Service</h3>
@@ -385,13 +377,11 @@
 									height="300"
 									alt="Screen Illustrations"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Screen Illustrations</h3>
@@ -406,13 +396,11 @@
 									height="300"
 									alt="Online Courses"
 								/>
-								<div class="cover">
-									<p>
-										14 Stylish and User-Friendly App Design Concepts · Task
-										Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-										App · Cloud Storage App
-									</p>
-								</div>
+								<p class="portfolio-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
 							<div class="text">
 								<h3 class="section-name">Online Courses</h3>
