--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<main class="wrapper">
 			<section class="section solutions">
 				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
-				<button type="button" class="btn button">Order Service</button>
+				<button type="button" class="btn">Order Service</button>
 			</section>
 			<section class="section skills">
 				<div class="container">
