--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
 				<div class="subscribe">
 					<p class="subscribe-text">Subscribe</p>
 					<form method="post" enctype="multipart/form-data">
-						<label for="email" class="form-label">
-							<input type="email" id="email" name="email" placeholder="E-mail" class="email">
+						<label for="sub-email" class="form-label">
+							<input type="email" id="sub-email" name="sub-email" placeholder="E-mail" class="email">
 						</label>
 						<button class="submit" type="submit">
 							Subscribe
@@ -503,7 +503,7 @@
 						</label>
 						<div class="input-container">
 							<input
-								type="phone"
+								type="tel"
 								class="form-input"
 								placeholder=""
 								name="phone"
@@ -514,7 +514,7 @@
 								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
 							</svg>
 						</div>
-						<label class="form-label" for="phone">
+						<label class="form-label" for="email">
 							Email
 						</label>
 						<div class="input-container">
