--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
 							</svg>
 						</div>
-						<label class="form-label" for="phone">
+						<label class="form-label" for="comment">
 							Comment
 							<textarea
 								class="form-input"
