--- a/index.html
+++ b/index.html
@@ -476,11 +476,11 @@
 						<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
 					</svg>
 				</button>
-				<form method="post" enctype="multipart/form-data">
+				<p class="group-title">
+					Leave your contacts and we will call you back
+				</p>
+				<form method="post" class="subscribe-form" enctype="multipart/form-data">
 					<div class="form-group">
-						<p class="group-title">
-							Leave your contacts and we will call you back
-						</p>
 						<label class="form-label" for="user-name">
 							Name
 						</label>
