--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 								<img
 									src="./images/team1.jpg"
 									width="264"
-									alt="Mark Guerrero Image"
-								/>
+									alt="Mark Guerrero Image">
 							</div>
 							<div class="text">
 								<h3 class="section-name">Mark Guerrero</h3>
@@ -160,8 +159,7 @@
 								<img
 									src="./images/team2.jpg"
 									width="264"
-									alt="Tom Ford Image"
-								/>
+									alt="Tom Ford Image">
 							</div>
 							<div class="text">
 								<h3 class="section-name">Tom Ford</h3>
@@ -203,8 +201,7 @@
 								<img
 									src="./images/team3.jpg"
 									width="264"
-									alt="Camila Garcia Image"
-								/>
+									alt="Camila Garcia Image">
 							</div>
 							<div class="text">
 								<h3 class="section-name">Camila Garcia</h3>
@@ -246,8 +243,7 @@
 								<img
 									src="./images/team4.jpg"
 									width="264"
-									alt="Daniel Wilson Image"
-								/>
+									alt="Daniel Wilson Image">
 							</div>
 							<div class="text">
 								<h3 class="section-name">Daniel Wilson</h3>
@@ -297,8 +293,7 @@
 									src="./images/portfolio1.jpg"
 									width="360"
 									height="300"
-									alt="Baking App"
-								/>
+									alt="Baking App">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -316,8 +311,7 @@
 									src="./images/portfolio2.jpg"
 									width="360"
 									height="300"
-									alt="Cashless Payment"
-								/>
+									alt="Cashless Payment">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -335,8 +329,7 @@
 									src="./images/portfolio3.jpg"
 									width="360"
 									height="300"
-									alt="Meditation App"
-								/>
+									alt="Meditation App">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -354,8 +347,7 @@
 									src="./images/portfolio4.jpg"
 									width="360"
 									height="300"
-									alt="Taxi Service"
-								/>
+									alt="Taxi Service">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -373,8 +365,7 @@
 									src="./images/portfolio5.jpg"
 									width="360"
 									height="300"
-									alt="Screen Illustrations"
-								/>
+									alt="Screen Illustrations">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -392,8 +383,7 @@
 									src="./images/portfolio6.jpg"
 									width="360"
 									height="300"
-									alt="Online Courses"
-								/>
+									alt="Online Courses">
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -492,8 +482,7 @@
 								name="user-name"
 								id="user-name"
 								autofocus
-								required
-							/>
+								required>
 							<svg width="18" height="24" class="icon">
 								<use href="./images/icons.svg#icon-person-black-18dp-1"></use>
 							</svg>
@@ -510,8 +499,7 @@
 								placeholder=""
 								name="phone"
 								id="phone"
-								required
-							/>
+								required>
 							<svg width="18" height="24" class="icon">
 								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
 							</svg>
@@ -528,8 +516,7 @@
 								placeholder=""
 								name="email"
 								id="email"
-								required
-							/>
+								required>
 							<svg width="18" height="24" class="icon">
 								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
 							</svg>
@@ -550,22 +537,20 @@
 					</div>
 					<div class="form-group">
 						<div class="checkbox-container">
-								<input
-									type="checkbox"
-									class="form-input"
-									name="terms"
-									id="terms"
-									required
-								/>
-								<svg width="10" height="8" class="icon">
-									<use href="./images/icons.svg#icon-Vector-1"></use>
-								</svg>
-							</div>
-							<label class="form-label terms" for="terms">
-								I accept the terms and conditions of the
-								<a href="">Privacy Policy</a>
-							</label>
+							<input
+								type="checkbox"
+								class="form-input"
+								name="terms"
+								id="terms"
+								required>
+							<svg width="10" height="8" class="icon">
+								<use href="./images/icons.svg#icon-Vector-1"></use>
+							</svg>
 						</div>
+						<label class="form-label terms" for="terms">
+							I accept the terms and conditions of the
+							<a href="">Privacy Policy</a>
+						</label>
 					</div>
 					<button type="submit">Send</button>
 				</form>
