--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 							id="user-privacy"
 							required>
 						<label class="form-label terms" for="user-privacy">
-							<span>
+							<span class="span">
 								<svg width="10" height="8" class="icon">
 									<use href="./images/icons.svg#icon-Vector-1"></use>
 								</svg>
