--- a/index.html
+++ b/index.html
@@ -544,13 +544,13 @@
 							id="user-privacy"
 							required>
 						<label class="form-label terms" for="user-privacy">
-							<span class="span">
+							<span>
 								<svg width="10" height="8" class="icon">
 									<use href="./images/icons.svg#icon-Vector-1"></use>
 								</svg>
 							</span>
 							I accept the terms and conditions of the
-							<a href="" class="policy">Privacy Policy</a>
+							<a href="">Privacy Policy</a>
 						</label>
 					</div>
 					<button class="submit" type="submit">Send</button>
